# IDM-Master

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
.github/workflows/: build.yml
crates/idm-engine/: Cargo.toml
crates/idm-engine/src/: main.rs
crates/idm-engine/src/engine/: classify.rs  connection.rs  db.rs  mod.rs  rules.rs  scheduler.rs  speed.rs  task.rs  writer.rs
docs/superpowers/plans/: 2026-07-09-phase1-download-engine.md
docs/superpowers/specs/: 2026-07-09-idm-master-design.md
extension/: manifest.json
extension-firefox/: manifest.json
extension-firefox/background/: browser-polyfill.js  service-worker.js
extension-firefox/content/: content-script.js
extension-firefox/popup/: popup.html  popup.js
extension/content/: content-script.js
scripts/: build-installer.ps1  installer.nsi
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs
src/api/: index.ts
src/components/: DownloadItem.tsx  DownloadList.tsx  SidePanel.tsx  Toolbar.tsx
src/stores/: useDownloadStore.ts
