[package]
name = "idm-master-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "idm_master_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
tokio = { version = "1", features = ["sync"] }
idm-engine = { path = "../crates/idm-engine" }
