[package]
name = "idm-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "idm-master"
path = "src/main.rs"

[lib]
name = "idm_engine"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
